src/ui/snapshots/work_tui__ui__confirm_dialog__tests__confirm_dialog_finish.snap
---
source: src/ui/confirm_dialog.rs
assertion_line: 298
expression: output
---
                                                                      
                                                                      
     ┌ Finish ──────────────────────────────────────────────────┐     
     │                                                          │     
     │  Action    Finish issue                                  │     
     │  Issue     TEST-42 Implement feature X                   │     
     │  Repo      my-project                                    │     
     │                                                          │     
     │  Will commit changes, push branch,                       │     
     │  create PR, transition to Review                         │     
     │                                                          │     
     │                                                          │     
     │Enter:Confirm  Esc:Cancel                                 │     
     └──────────────────────────────────────────────────────────┘
