src/ui/snapshots/work_tui__ui__confirm_dialog__tests__confirm_dialog_pick_up_branch_base_choice.snap
---
source: src/ui/confirm_dialog.rs
expression: output
---
                                                                      
     ┌ Pick Up ─────────────────────────────────────────────────┐     
     │                                                          │     
     │  Action    Pick up issue                                 │     
     │  Issue     TEST-42 Implement feature X                   │     
     │  Repo      my-project                                    │     
     │                                                          │     
     │  Branch off  [ main ]    TEST-7-some-feature             │     
     │                                                          │     
     │  Open       [ opencode ]  none  explore                  │     
     │                                                          │     
     │  Will checkout branch, then assign issue,                │     
     │  transition to In Progress, open editor                  │     
     │                                                          │     
     │                                                          │     
     │←/→:Branch  ↑/↓:Open  Enter:Confirm  Esc:Cancel           │     
     └──────────────────────────────────────────────────────────┘
