src/ui/snapshots/work_tui__ui__confirm_dialog__tests__confirm_dialog_pick_up_carry_changes_not_selected.snap
---
source: src/ui/confirm_dialog.rs
expression: output
---
                                                                      
     ┌ Pick Up ─────────────────────────────────────────────────┐     
     │                                                          │     
     │  Action    Pick up issue                                 │     
     │  Issue     TEST-42 Implement feature X                   │     
     │  Repo      my-project                                    │     
     │                                                          │     
     │  Changes      Carry    [ Abort ]                         │     
     │                                                          │     
     │  Open       [ opencode ]  none  explore                  │     
     │                                                          │     
     │  Will checkout branch, then assign issue,                │     
     │  transition to In Progress, open editor                  │     
     │                                                          │     
     │                                                          │     
     │←/→/Tab:Changes  ↑/↓:Open  Enter:Confirm  Esc:Cancel      │     
     └──────────────────────────────────────────────────────────┘
