src/ui/snapshots/work_tui__ui__confirm_dialog__tests__confirm_dialog_pick_up_with_repo.snap
---
source: src/ui/confirm_dialog.rs
expression: output
---
                                                                      
     ┌ Pick Up ─────────────────────────────────────────────────┐     
     │                                                          │     
     │  Action    Pick up issue                                 │     
     │  Issue     TEST-42 Implement feature X                   │     
     │  Repo      my-project                                    │     
     │                                                          │     
     │  Open       [ opencode ]  none  explore                  │     
     │                                                          │     
     │  Will checkout branch, then assign issue,                │     
     │  transition to In Progress, open editor                  │     
     │                                                          │     
     │                                                          │     
     │↑/↓:Open  Enter:Confirm  Esc:Cancel                       │     
     └──────────────────────────────────────────────────────────┘
