src/ui/snapshots/work_tui__ui__confirm_dialog__tests__confirm_dialog_pick_up_without_repo.snap
---
source: src/ui/confirm_dialog.rs
expression: output
---
     ┌ Pick Up ─────────────────────────────────────────────────┐     
     │                                                          │     
     │  Action    Pick up issue                                 │     
     │  Issue     TEST-99 No repo task                          │     
     │                                                          │     
     │  Open       [ opencode ]  none  explore                  │     
     │                                                          │     
     │  Will assign issue and transition                        │     
     │  to In Progress (no repo linked)                         │     
     │                                                          │     
     │                                                          │     
     │↑/↓:Open  Enter:Confirm  Esc:Cancel                       │     
     └──────────────────────────────────────────────────────────┘
